--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard"
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
@@ -12,5 +12,8 @@
   "dependencies": {
     "bent": "^6.1.0",
     "json-stream": "^1.0.0"
+  },
+  "devDependencies": {
+    "standard": "^14.1.0"
   }
 }
