--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
     "bent": "^6.1.0",
-    "json-stream": "^1.0.0"
+    "brotli-max": "0.0.0",
+    "json-stream": "^1.0.0",
+    "mkdirp": "^0.5.1",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
     "standard": "^14.1.0"
