--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "min-gharchive",
   "version": "0.0.0",
   "main": "index.js",
+  "description": "Filter gharchive data down to something usable.",
   "scripts": {
     "test": "standard"
   },
@@ -28,6 +29,5 @@
   "bugs": {
     "url": "https://github.com/mikeal/min-gharchive/issues"
   },
-  "homepage": "https://github.com/mikeal/min-gharchive#readme",
-  "description": ""
+  "homepage": "https://github.com/mikeal/min-gharchive#readme"
 }
