--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bent": "^6.1.0",
     "brotli-max": "0.0.0",
     "json-stream": "^1.0.0",
+    "jsonstream2": "^2.0.1",
     "mkdirp": "^0.5.1",
     "yargs": "^14.0.0"
   },
