--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,21 +6,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Cache node_modules
+      id: cache-modules
+      uses: actions/cache@v1
+      with:
+        path: node_modules
+        key: ${{ runner.OS }}-build-${{ hashFiles('package.json') }}
     - name: Build
-      uses: actions/npm@master
-      with:
-        entrypoint: npm
-        args: install
+      if: steps.cache-modules.outputs.cache-hit != 'true'
+      run: npm install
     - name: Test
-      uses: actions/npm@master
-      with:
-        entrypoint: npm
-        args: test
-    - name: Publish Filter
-      uses: actions/bin/filter@master
-      with:
-        args: branch master
+      run: npm test
     - name: Publish
+      if: github.ref == 'refs/heads/master'
       uses: mikeal/merge-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
